非訟事件法 2009.12.15

--- a/司法-民事/非訟事件法.md
+++ b/司法-民事/非訟事件法.md
@@ -174,9 +174,9 @@
 
 > 釋：一、原條文第二十六條條次變更為本條。二、原條文未修正，列為第二項。三、將來非訟事件依其種類之不同，其第一審法院或為地方法院或為簡易庭，為使抗告程序一致，爰參考民事訴訟法第四百三十六條之一之立法例，規定抗告由地方法院以合議裁定之。又因非訟事件態樣日趨繁雜，將來其他法律或會就某些特定事件另定其救濟程序，故並設除外規定，以資兼顧。
 
-* 45 抗告法院之裁定，以抗告不合法而駁回者，不得再為抗告。但得向原法院提出異議。前項異議，準用民事訴訟法第四百八十四條第二項及第三項之規定。除前二項之情形外，對於抗告法院之裁定再為抗告，僅得以其適用法規顯有錯誤為理由，並經原法院之許可者為限。前項許可，以原裁定所涉及之法律見解具有原則上重要性者為限。民事訴訟法第四百三十六條之三第三項、第四項及第四百三十六條之六之規定，於第三項之抗告準用之。
+* 45 抗告法院之裁定，以抗告不合法而駁回者，不得再為抗告。但得向原法院提出異議。前項異議，準用民事訴訟法第四百八十四條第二項及第三項之規定。除前二項之情形外，對於抗告法院之裁定再為抗告，僅得以其適用法規顯有錯誤為理由。
 
-> 釋：一、原條文第二十七條條次變更為本條。二、斟酌非訟事件應迅速處理之特質，參考民事訴訟法第四百三十六條之二第一項規定，將第一項至第四項所定再抗告之要件作更嚴格之限制，並明定再抗告之法院。三、第二項配合前四項規定併作修正。
+> 釋：一、修正原第三項規定，並刪除原第四項、第五項規定。二、由抗告法院審查其裁定適用法規是否顯有錯誤，並許可抗告人之抗告，無異要求抗告法院自承其裁定有錯誤，實非易事，且對於再抗告人不公平。又依原第五項前段規定準用結果，抗告法院審查後，若認原裁定適用法規顯有錯誤，且再抗告應予許可者，應添具意見書；若認原裁定適用法規並無顯有錯誤，不應許可再抗告者，應裁定駁回再抗告，惟再抗告人對該裁定又可抗告，且再抗告法院不受抗告法院上開審查結果之拘束，故抗告法院之審查是否有必要即有待商榷，其再抗告之許可宜改由再抗告法院為之，始為妥當，爰修正第三項規定。三、民事訴訟法第四百三十六條之三第三項係規定為裁定之原法院認為應許可抗告時所應為之程序行為，第四項則規定原法院認為不應許可而駁回抗告之裁定得逕向最高法院抗告等規定，因本條第三項改為由再抗告法院許可而無再準用之必要；再者，非訟事件本無聲請再審之適用，是故關於民事訴訟法第四百三十六條之六規定，亦無準用之必要，原第五項規定爰予以刪除。
 
 * 46 抗告及再抗告，除本法另有規定外，準用民事訴訟法關於抗告程序之規定。
 
@@ -486,9 +486,9 @@
 
 > 釋：原條文第四十八條條次變更為本條，內容未修正。
 
-* 109 失蹤人未置財產管理人者，其財產管理人依下列順序定之：一、配偶。二、父母。三、成年子女。四、與失蹤人同居之祖父母。五、家長。不能依前項規定定財產管理人時，法院得因利害關係人或檢察官之聲請，選任財產管理人。財產管理人之權限，因死亡、受禁治產或破產之宣告或其他原因消滅時，準用前二項之規定。
+* 109 失蹤人未置財產管理人者，其財產管理人依下列順序定之：一、配偶。二、父母。三、成年子女。四、與失蹤人同居之祖父母。五、家長。不能依前項規定定財產管理人時，法院得因利害關係人或檢察官之聲請，選任財產管理人。財產管理人之權限，因死亡、受監護、輔助或破產之宣告或其他原因消滅時，準用前二項之規定。
 
-> 釋：一、原條文第四十九條條次變更為本條。二、本文之「左列」修正為「下列」，以符現行法制用語。三、子女之於父母，關係甚為親密，於失蹤人若有子女且已成年，應有管理財產之能力，當許其管理，又依經驗法則，父母對子女之愛護甚於子女對父母，故於第一項第二款父母之後新增「成年子女」列為第三款，原第三款、第四款則依序變更為第四款、第五款，以臻完備。四、檢察官為維護公益之代表，於不能依第一項規定定財產管理人時，除利害關係人外，亦應許檢察官得聲請法院選任財產管理人，方能保護失蹤人之權益及公益，爰於第二項增列「檢察官」為聲請人。五、原條文第三項所定「亦同」二字，文義不明，爰改為「準用前二項之規定」，以臻明確。六、原條文第二項中關於法院得以裁定命為必要處分部分，移列於第一百十三條，原第四項移列於第一百十四條。
+> 釋：民國九十八年十一月二十三日施行修正之民法總則編及親屬編（下稱九十八年修正後民法）已將「禁治產」改為「監護」，爰配合修正第三項規定。又九十八年修正後民法另增訂輔助宣告制度，受輔助宣告之人為一定特定行為須經輔助人之同意，無法達到有效管理失蹤人財產之目的，應認不宜擔任財產管理人為當，並於第三項增列財產管理人如受輔助宣告，亦準用前二項規定。至於依消費者債務清理條例規定受法院裁定開始清算程序之債務人，依該條例第八十四條規定，準用其他法令關於破產人資格、權利限制之規定，故財產管理人受法院裁定開始清算程序者，自可準用第三項規定。
 
 * 110 財產管理人有數人者，關於失蹤人之財產管理方法依協議定之；不為協議或協議不成時，財產管理人或利害關係人得聲請法院酌定之。
 
@@ -570,53 +570,113 @@
 
 > 釋：一、原條文第七十一條之八條次變更為本條。二、修正第一項引用條文之條次，其餘不修正。
 
-* 130 第一百二十二條至前條之規定，於婚姻無效或撤銷、確認婚姻不成立，與法院宣告停止親權、監護權，及非婚生子女經認領時，有關對於未成年子女權利義務之行使負擔事件，準用之。
+* 130 第一百二十二條至前條之規定，於婚姻無效或撤銷、確認婚姻不成立、婚姻視為消滅，與法院宣告停止親權、監護權、父母不繼續共同生活達六個月以上及非婚生子女經認領時，有關對於未成年子女權利義務之行使負擔事件，準用之。
 
-> 釋：一、原條文第七十一條之九條次變更為本條。二、修正第一項引用條文之條次，其餘不修正。
+> 釋：民國九十六年五月二十三日修正施行之民法親屬編（下稱九十六年修正民法）第九百八十八條之一增訂重婚之雙方當事人因善意且無過失信賴一方前婚姻消滅之兩願離婚登記或離婚確定判決而結婚者，重婚之前婚姻自後婚姻成立之日起視為消滅，其效力除另有規定外，準用離婚之效力，故前婚姻所生未成年子女權利義務之行使負擔，即有準用離婚事件規定之必要。而第一千零八十九之一增訂父母不繼續共同生活六個月以上之未成年子女權利義務行使負擔之規定，與民法第一千零五十五條所定事件性質相近，亦有準用之必要，爰修正本條。
 
-* 131 婚姻無效或撤銷婚姻，與確認婚姻成立或不成立及離婚或夫妻同居之訴，已繫屬於法院者，法院應將第一百二十二條及前條所定之事件裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判。前項裁定不得聲明不服。
+* 131 有關婚姻或親子關係之訴訟，已繫屬於法院者，法院應將第一百二十二條及前條所定事件裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判。前項裁定不得聲明不服。
 
-> 釋：一、原條文第七十一條之十條次變更為本條。二、修正第一項引用條文之條次，其餘不修正。
+> 釋：婚姻無效或撤銷婚姻與確認婚姻成立或不成立及離婚或夫妻同居之訴，係有關婚姻關係之訴訟，而收養無效、撤銷收養、確認收養關係成立或不成立及終止收養關係之訴，否認或認領子女、否認推定生父之訴，認領無效或撤銷認領之訴及就母再婚後所生子女確定其父之訴，宣告停止親權或撤銷其宣告之訴，則屬有關親子關係之訴訟，為因應將來可能新增之相關訴訟類型亦一併處理，以免掛一漏萬，爰修正第一項。
+
+* 131.1 民法第一千零五十九條第五項、第一千零五十九條之一第二項及第一千零七十八條第三項所定變更子女姓氏事件，由子女住所地或居所地之法院管轄。第一百二十二條第二項、第三項、第一百二十三條、第一百二十五條、第一百二十六條及第一百二十八條之規定，於前項事件準用之。
+
+> 釋：一、本條新增。二、配合九十六年修正民法新增變更子女姓氏事件，爰增訂本條。三、變更子女姓氏事件，由與子女關係最密切之法院即子女之住、居所地法院管轄，可保護子女之利益，便於法院審核，參酌本法第一百二十二條第一項規定，規定第一項管轄法院。四、為維護未成年子女之利益，於第二項規定準用之相關條文；其中第一百二十二條第三項規定，應僅限聲請變更未成年子女姓氏時準用之，至於成年子女部分，則應依本法第二十一條規定辦理。
+
+* 131.2 民法第一千零八十六條第二項所定選任特別代理人事件，由未成年子女住所地或居所地之法院管轄。第一百二十條、第一百二十二條第二項、第三項及第一百二十三條至第一百二十八條之規定，於前項事件準用之。
+
+> 釋：一、本條新增。二、配合九十六年修正民法第一千零八十六條第二項新增選任未成年子女特別代理人之規定，爰增訂本條。三、為保護未成年子女之利益，參酌本法第一百二十二條第一項，於第一項規定管轄法院，並於第二項訂定準用之相關條文。
 
 * 132 民法第一千零八十九條第二項所定父母對於未成年子女重大事項之行使酌定事件，由未成年子女之住所或居所地之法院管轄。未成年子女有數人，其住所或居所不在一法院管轄區域內者，各該住所或居所地之法院俱有管轄權。
 
 > 釋：一、原條文第七十一條之十一條次變更為本條。二、依法院組織法第九條第三款規定，法律規定之非訟事件本由地方法院管轄，原條文第一項末句「法院管轄」前，無贅列「地方」二字之必要，爰予刪除。
 
-* 133 民法第一千零七十九條第四項所定認可收養子女事件，由收養人住所地之法院管轄；收養人在中華民國無住所者，由被收養人住所地或所在地之法院管轄。前項事件，以收養人及被收養人為聲請人。
+* 133 民法第一千零七十九條第一項所定認可收養子女事件，由收養人住所地之法院管轄；收養人在中華民國無住所者，由被收養人住所地或所在地之法院管轄。前項事件，以收養人及被收養人為聲請人。
 
-> 釋：一、原條文第七十五條之一條次變更為本條。二、本法於各類非訟事件之首均先規定其管轄法院，為求體例一致，爰將原條文第一、二項對調，改列為第二、一項。原第一項但書部分，因民法親屬編第一千零九十四條第五項規定在選定監護人確定前，由當地社會福利主管機關為期監護人，已解決無法定代理人之問題，爰配合刪除。三、認可收養事件由與收養人關係最密切之法院管轄，較符當事人利益及便於法院審核，故原則上由收養人住所地之法院管轄為宜；惟於外國人或華僑收養我國兒童之情形，因收養人在我國多無住所，若適用第二條第三項規定，以「最高法院所在地之法院為管轄法院」，仍有不便，爰增設本條第一項後段：「收養人於中華民國無住所者，由被收養人住所地或所在地之法院管轄」之規定，以資兼顧。
+> 釋：配合九十六年修正民法第一千零七十九條將原條文項次變更，修正第一項文字。
 
-* 134 前條第一項事件之聲請，應附具下列文件：一、收養契約書。二、收養人及被收養人之身分證明文件。三、被收養人為未成年人時，收養人職業、健康及有關資力之證明文件。四、被收養人有配偶時，其配偶之同意書，或不能同意之證明文件。五、被收養人本生父母之同意書。但本生父母礙難同意者，不在此限。六、收養人或被收養人為外國人時，收養符合其本國法之證明文件。前項文件在境外作成者，應經當地中華民國駐外機構認證或證明；如係外文，並應添具中文譯本。
+* 134 前條第一項事件之聲請，應附具下列文件：一、收養契約書。二、收養人及被收養人之身分證明文件。三、被收養人為未成年人時，收養人職業、健康及有關資力之證明文件。四、夫妻之一方被收養時，他方之同意書。但有民法第一千零七十六條但書情形者，不在此限。五、經公證之被收養人本生父母同意書。但有民法第一千零七十六條之一第一項但書、第二項但書或第一千零七十六條之二第三項情形者，不在此限。六、收養人或被收養人為外國人時，收養符合其本國法之證明文件。前項文件在境外作成者，應經當地中華民國駐外機構認證或證明；如係外文，並應添具中文譯本。
 
-> 釋：一、本條新增。二、為利認可收養事件之調查暨使聲請人知所遵循，參考現行民法第一千零七十六條（配偶之同意）、第一千零七十九條第一項、第三項及兒童福利法第二十七條第六項（收養行為之方式、本生父母之同意）等規定，增訂第一項，明定聲請認可收養時應提出之各該證明文件。三、第一項所定文件如係在中華民國境外作成者，為確保其形式上之真正，有經我國駐外機構認證或證明之必要；如係外文，並應附具中文譯本，以利調查，故增訂第二項。
+> 釋：配合九十六年修正民法第一千零七十六條規定，爰修正第一項第四款；配合修正民法第一千零七十六條之一第一項、第二項及第一千零七十六條之二第三項規定，爰修正第一項第五款。
 
 * 135 被收養人之本生父母為未成年人而未結婚者，法院為認可收養之裁定前，應聽取其意見。但有礙難情形者，不在此限。
 
 > 釋：一、本條新增。二、未滿七歲未成年人被收養時，由法定代理人代為意思表示並代受意思表示，滿七歲之未成年人被收養時，應得其法定代理人之同意，民法第一千零七十九條第二項、第三項定有明文。因子女出養後，於收養關係存續中，其與本生父母間之權利義務均停止，關係重大；為維護當事人之權益，爰增設被收養人之本生父母縱未成年且未結婚時，法院於裁定前，亦應聽取其意見，以供審酌參考。惟因未成年人出養其非婚生子女之緣由、情狀不一，為免對其造成二度傷害並兼顧事件進行，併設但書之例外規定，讓法院得視實際情況，決定是否聽取，用資兼顧。
 
-* 136 民法第一千零八十條第五項所定聲請許可終止收養事件，由養子女住所地之法院管轄。
+* 136 民法第一千零八十條第二項、第一千零八十條之一第一項所定聲請認可、許可終止收養事件，由養子女住所地之法院管轄。
 
-> 釋：原條文第七十五條之二條次變更為本條，內容未修正。
+> 釋：配合九十六年修正民法新增第一千零八十條第二項及原第一千零八十條第五項條次調整，爰修正並增列文字。
 
 * 137 第一百二十三條至第一百二十八條之規定，於有關收養事件準用之。法院認可未成年人被收養前，得准收養人與未成年人共同生活一段期間，供法院決定之參考；共同生活期間，對於未成年人權利義務之行使負擔，由收養人為之。
 
 > 釋：一、本條新增。二、為保護未成年子女之利益，本法於第一百二十三條至第一百二十八條就民法第一千零五十五條所定夫妻離婚後，有關對於未成年子女權利義務之行使或負擔之酌定、改定或變更事件之處理，設有特別規定，上開條文於養子女為未成年人之認可收養及終止收養事件，亦有準用之必要，爰增訂本條第一項，俾資周全。三、法院在許可收養未成年子女前，讓收養者與被收養之未成年人共同生活一段時間，有利於法院為認可收養與否決定時之參考，現行兒童福利法第二十七條第三項即定有明文，惟兒童福利法屬兒童福利之行政法規，而收養制度攸關親屬及身分關係，是收養程序移至非訟程序中加以規範，體例較一致。又前開准許共同生活期間，未成年人實際由收養人而非其本生父母或監護人保護教養，爰增列第二項規定。
 
-* 138 民法第一千零九十四條第二項之選定或改定監護人事件，由未成年人住所地或所在地之法院管轄。第一百二十二條第二項、第三項、第一百二十三條至第一百二十八條之規定，於前項情形準用之。
+* 138 民法第一千零九十四條第三項、第一千一百零六條第一項、第一千一百零六條之一第一項之選定、另行選定或改定監護人事件，由未成年人住所地或所在地之法院管轄。第一百二十二條第二項、第三項、第一百二十三條至第一百二十八條之規定，於前項情形準用之。
 
-> 釋：一、原條文第七十二條條次變更為本條。二、民國八十九年一月十九日修正公布之民法第一千零九十四條第二項，已增設法院得依聲請選定或改定監護人之規定，爰刪除本條第一項，以免重覆。三、第二項有關管轄之規定改列為第一項。又民法第一千零九十四條第二項已有規定改定監護人之情事，基本上不再需要由親屬會議以解除或撤退方式解除監護人之職務。至於應置監護人之未成年人如係棄嬰或無依兒童時，其親屬關係或住所地不明，而未成年人之監護，刻不容緩；為利事件進行，自宜許其所在地法院亦有管轄權，爰於末句增列「或所在地」等字。四、為維護未成年人之利益，第一百二十二條第二項有關管轄競合、第三項程序費用負擔以及第一百二十三條至第一百二十八條有關保護未成年子女之規定，均應予準用，爰增訂第二項。
+> 釋：配合九十八年修正後民法第一千零九十四條條次變更；第一千一百零六條刪除親屬會議相關規定，新增由法院另行選定監護人；及第一千一百零六條之一增訂法院改定監護人規定，爰修正並增列第一項文字。
 
-* 139 民法第一千一百十一條第二項監護人之選定事件，由禁治產人住所地之法院管轄。
+* 138.1 民法第一千零九十三條第二項、第一千零九十四條第二項、第一千零九十九條所定報告或陳報事件，由未成年人住所地或所在地之法院管轄。
 
-> 釋：一、原條文第七十三條條次變更為本條。二、非訟事件之管轄均為專屬管轄，如禁治產人護養療治處所與禁治產人住所不在同一法院轄區內，不適合由其住所地之法院為其選任監護人時，得適用第二條第二項規定，由其護養療治處所即居所地之法院管轄，附此敘明。
+> 釋：一、本條新增。二、配合九十八年修正後民法新增第一千零九十三條第二項之監護人報告事件、第一千零九十四條第二項監護人報告事件、第一千零九十九條之監護人陳報事件，爰增訂本條。三、依民法第一千一百零三條第二項規定，法院於必要時，得命監護人提出監護事務之報告、財產清冊或結算書，檢查監護事務或受監護人之財產狀況。該項規定所指之法院，如其監護人係法定監護人者，乃指民法第一千零九十四條第二項所定之法院，若其監護人係由法院所選定之監護人，則本項之法院，係指選定之法院；再者，依民法第一千一百零八條規定，監護人死亡時，其無繼承人或繼承人有無不明者，新監護人應逕行辦理結算，連同依第一千零九十九條規定開具財產清冊陳報法院，此時新監護人，應依民法第一千零九十九條規定，向未成年人住所地或所在地之法院陳報。
 
-* 140 由法院所選定之監護人，非有下列各款情形之一者，不得辭任：一、滿六十歲者。二、因身心障礙或疾病不能執行監護者。三、住所或居所與法院或受監護人所在地隔離，不便執行監護者。四、有其他重大事由者。
+* 138.2 民法第一千零九十五條所定監護人辭任事件，由未成年人住所地或所在地之法院管轄。第一百二十四條至第一百二十六條及第一百二十八條之規定，於前項情形準用之。
 
-> 釋：一、原條文第七十四條條次變更為本條。二、本文之「左列」修正為「下列」，以符現行法制用語；為求用語嚴謹並尊重弱勢團體，第二款之「殘廢疾病」修正為「身心障礙或疾病」。
+> 釋：一、本條新增。二、配合九十八年修正後民法新增第一千零九十五條監護人辭任事件，爰增訂第一項。三、為保障受監護人之利益，第一百二十四條至第一百二十六條及第一百二十八條關於保護未成年子女之規定，於前項情形均應予準用，爰增訂第二項。
 
-* 141 民法第一千一百五十六條所定限定繼承陳報事件，由繼承開始時被繼承人住所地之法院管轄。繼承人為前項陳報時，應於陳報書記載下列各款事項，並附具遺產清冊：一、陳報人。二、被繼承人之姓名及最後住所。三、為限定繼承之意旨；如有其他繼承人者，其姓名、性別、出生年月日及住、居所。前項遺產清冊應記載被繼承人之財產狀況及繼承人已知之債權人、債務人。
+* 138.3 民法第一千零九十七條第二項所定酌定監護人行使權利事件，由未成年人住所地或所在地之法院管轄。第一百二十四條之規定，於前項情形準用之。
 
-> 釋：一、原條文第七十六條條次變更為本條。二、原條文第一項後段所定民法第一千一百七十八條繼承開始及親屬會議選定遺產管理人之陳報，與原條文第五十八條所定無人承認繼承之遺產管理、第七十八條第一項所定遺產管理人之選任，均屬無人承認之繼承事件，宜合併規範，爰將之移列於本法第一百四十五條中，俾使體例完整清楚。三、為符現行法制用語，第二項之「呈報」、「左列」分別修正為「陳報」、「下列」 ，並配合民法第一千一百五十八條為限定繼承者，應開具遺產清冊呈報法院之規定，將遺產清冊明定為陳報書應附具之文件。又本法第三十條有關聲請書狀應由聲請人或代理人簽名，並記載其等之姓名年籍、法院及年月日等事項之規定，於各類非訟事件均應一體適用，本條無贅列必要，爰刪除第二項第五、六款，將第一、二款合併修正為「陳報人」，第三款調整為第二款，第四款移列為第三款並修正為：「為限定繼承之意旨」，同時參照民法第一千一百五十四條第二項「繼承人中之一人主張限定繼承時，其他繼承人視同為限定繼承」之規定意旨，增列如有其他繼承人時，應記載其姓名、年籍等事項之規定。四、主張限定繼承時，繼承人僅以因繼承所得之遺產償還被繼承人之債務（民法第一千一百五十四條第一項規定參照），為使被繼承人之債權人能公平受償，遺產清冊自宜儘量記載明確，故增訂第三項，要求遺產清冊應詳細記載被繼承人之財產狀況（包括積極財產及消極財產）及為繼承人已知之債權人及債務人，俾利清償。
+> 釋：一、本條新增。二、配合九十八年修正後民法新增第一千零九十七條第二項酌定監護人行使權利事件，爰增訂第一項。三、為保障受監護人之利益，第一百二十四條關於為必要保全處分之規定，於前項情形應予準用，爰增訂第二項。
+
+* 138.4 民法第一千一百零四條所定酌定監護人報酬事件，由未成年人住所地之法院或選定、另行選定、改定監護人之法院管轄。
+
+> 釋：一、本條新增。二、配合九十八年修正後民法新增第一千一百零四條酌定監護人報酬事件，爰增訂本條。
+
+* 138.5 民法第一千零九十八條第二項所定選任特別代理人事件，由未成年人住所地或居所地之法院管轄。第一百三十一條之二第二項之規定，於前項事件準用之。
+
+> 釋：一、本條新增。二、配合九十八年修正後民法新增選任受監護人特別代理人事件，爰增訂本條。
+
+* 138.6 民法第一千一百零一條第二項所定許可監護人行為事件，由未成年人住所地或居所地之法院管轄。
+
+> 釋：一、本條新增。二、配合九十八年修正後民法新增第一千一百零一條第二項受監護人特定財產處分行為事件，爰增訂本條。
+
+* 139 （刪除）
+
+> 釋：一、本條刪除。二、依九十八年修正後民法第一千一百十一條第一項，法院為監護之宣告時，應依職權選定監護人，刪除原第一項規定以法定監護人優先及第二項不能依前項規定定其監護人始由法院選定之規定；而法院為監護宣告之裁定時，應同時選定監護人之相關程序，業已在九十八年修正之民事訴訟法第六百零四條明定，故原規定「民法第一千一百十一條第二項監護人選定事件」，即無於非訟事件法規定之必要，爰予以刪除。
+
+* 139.1 民法第一千一百十二條之一指定、撤銷或變更監護人執行職務範圍事件，由選定監護人之法院或受監護宣告之人住所地或居所地之法院管轄。
+
+> 釋：一、本條新增。二、配合九十八年修正後民法第十四條及第一千一百十二條之一之規定，就指定、撤銷或變更監護人執行職務範圍事件，規定由選定監護人之法院或受監護宣告之人住所地或居所地之法院管轄，爰增訂第一項；又法院依民法第一千一百十一條第一項及第一千一百十二條之一第一項規定，於為監護宣告同時選定數監護人，並依職權指定其共同或分別執行職務之範圍者，非屬本條所指之指定監護人執行職務範圍事件，其指定應由為監護宣告之法院為之。
+
+* 139.2 第一百三十八條至第一百三十八條之六之規定，於監護宣告事件準用之。受監護宣告之人，於前條及前項事件，有非訟能力。
+
+> 釋：一、本條新增。二、九十八年修正後民法第一千一百十三條規定，民法第一千零九十五條、第一千零九十七條第二項、第一千零九十八條第二項、第一千零九十九條、第一千一百零一條第二項、第一千一百零四條、第一千一百零六條及第一千一百零六條之一等未成年人監護之規定，於成年人之監護準用之，而未成年人依民法第十四條受監護之宣告者，適用本章第二節成年人監護之規定，復為民法第一千一百零九條之二所明定，是前開民法所定事件，為監護宣告，自有準用之必要，爰增訂第一項。三、前條及第一項之事件，受監護宣告之人均可獨立提出聲請，爰增訂第二項，明定其有非訟能力，以保障其程序權。
+
+* 139.3 第一百三十八條、第一百三十八條之二至第一百三十八條之五及第一百三十九條之一之規定，於輔助宣告事件準用之。
+
+> 釋：一、本條新增。二、九十八年修正後民法第一千一百十三條之一第二項規定，民法第一千零九十五條、第一千零九十八條第二項、第一千一百零四條、第一千一百零六條、第一千一百零六條之一及第一千一百十二條之一規定，於輔助人及有關輔助宣告準用之，是前開民法所定事件，於輔助宣告，自有準用之必要；再者，輔助人有數人，對於受輔助宣告之人重大事項權利之行使意思不一致時，宜類推適用民法第一千零九十七條第二項規定，得聲請法院依受輔助宣告之人之最佳利益，酌定由其中一輔助人行使之，是亦有準用其事件程序規定之必要；爰增訂本條。又受輔助宣告之人，依非訟事件法第十一條準用民事訴訟法規定，受輔助宣告之人就關於財產權訴訟事件為訴訟行為，固須得輔助人之同意，但就婚姻等身分之人事訴訟事件，則有訴訟能力，故受輔助宣告之人，就身分非訟事件，自有非訟能力。
+
+* 140 由法院所選定之監護人，有下列各款情形之一者，得辭任其職務：一、滿六十歲。二、因身心障礙或疾病不能執行監護。三、住所或居所與法院或受監護人所在地隔離，不便執行監護。四、有其他重大事由。
+
+> 釋：配合九十八年修正後民法第一千零九十五條規定，酌予文字修正。
+
+* 140.1 民法第一千一百二十條但書所定扶養費給付事件，由受扶養權利人住所地或居所地之法院管轄。法院就前項事件為裁定前，應使關係人有陳述意見之機會。第一百二十二條第二項、第三項、第一百二十三條、第一百二十四條、第一百二十七條第二項、第三項、第一百二十九條、第一百三十一條及第一百三十九條之二第二項之規定，於第一項事件準用之。
+
+> 釋：一、本條新增。二、配合修正民法第一千一百二十條新增定扶養費給付事件，爰增訂第一項。三、定給付扶養費事件，影響扶養權人及扶養人權益甚鉅，法院為定扶養費給付之裁定前，應賦予關係人有陳述意見之機會，以保障其程序權，爰增訂第二項。四、受扶養權利人為未成年子女且有數人者，其住所或居所不在一法院管轄區域內者，各該住所或居所地之法院俱有管轄權，該事件有理由者，程序費用由未成年子女之父母或父母之一方負擔；受扶養權利人為滿七歲以上之未成年人者，就第一項事件有非訟能力；法院就第一項事件為裁定前，得依聲請命為必要之處分，該裁定不得抗告，並準用民事訴訟法關於保全程序規定，以保障受扶養權利人之權益；法院關於命扶養費之給付，得依聲請或依職權，命為一次給付或分期給付，分期給付遲誤一期者，其後之期間視為亦已到期，此項裁定得為執行名義；本事件處理中兩造就扶養費之給付得達成協議，並記明筆錄，該項筆錄應送達當事人及利害關係人，並得為執行名義；就受扶養權利有無之訴訟業已繫屬於法院者，非訟法院應將第一項事件裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判；受扶養權利人為受監護宣告之人者，就第一項事件有非訟能力，爰增訂第三項。
+
+* 140.2 法院依民法第一千一百二十條但書所定扶養費之給付，因情事變更請求法院變更事件，準用前條規定。
+
+> 釋：一、本條新增。二、依民法第一千一百二十條但書規定，扶養費之給付，當事人不能協議時，由法院定之。關於此項扶養費之給付既由法院定之，則其後因情事變更而請求變更者，自仍應由法院變更之，無再經由親屬會議變更之必要；再者，請求法院變更事件，與前條由法院定扶養費給付事件相近，宜準用其程序，爰增訂本條。
+
+* 141 民法第一千一百五十六條所定遺產清冊陳報事件，由繼承開始時被繼承人住所地之法院管轄。繼承人為前項陳報時，應於陳報書記載下列各款事項，並附具遺產清冊：一、陳報人。二、被繼承人之姓名及最後住所。三、知悉繼承之時間；如有其他繼承人者，其姓名、性別、出生年月日及住、居所。前項遺產清冊應記載被繼承人之財產狀況及繼承人已知之債權人、債務人。
+
+> 釋：民國九十七年一月二日修正公布民法繼承編（下稱九十七年修正民法）第一千一百五十六條，已將限定繼承者應於繼承開始時起三個月內開具遺產清冊呈報法院之規定修改為繼承人於知悉其得繼承之時起，三個月內呈報法院，法院接獲限定繼承呈報後，應定期間命繼承人開具遺產清冊，爰於第二項第三款修改為陳報人應記載其知悉繼承之時間。
+
+* 141.1 民法第一千一百五十六條之一第一項所定債權人聲請命繼承人提出遺產清冊事件，由繼承開始時被繼承人住所地之法院管轄。債權人為前項聲請時，其聲請書應記載下列各款事項：一、聲請人。二、被繼承人之姓名及最後住所。三、繼承人之姓名及住、居所。四、聲請命繼承人提出遺產清冊之意旨。前條第二項、第三項規定，於繼承人依民法第一千一百五十六條之一第一項規定提出遺產清冊事件準用之。
+
+> 釋：一、本條新增。二、配合九十八年修正民法第一千一百五十六條之一第一項新增債權人聲請命繼承人提出遺產清冊事件，規定管轄法院、債權人聲請書應記載事項、繼承人為陳報時之準用規定。
+
+* 141.2 第一百四十一條規定，於繼承人依民法第一千一百五十六條之一第二項規定提出遺產清冊事件準用之。
+
+> 釋：一、本條新增。二、配合九十八年修正民法第一千一百五十六條之一第二項，增訂法院依職權命繼承人提出遺產清冊事件，規定管轄法院及繼承人為陳報時之準用規定。
 
 * 142 民事訴訟法第五百四十一條至第五百四十三條之規定，除申報權利期間外，於法院依民法第一千一百五十七條為公示催告被繼承人之債權人報明債權時，準用之。前項情形應通知其他繼承人。
 
@@ -638,9 +698,9 @@
 
 > 釋：一、本條新增。二、親屬會議既非法人，又非非法人團體，無非訟能力，其如何依民法第一千一百七十七條之規定，於繼承人有無不明時，將繼承開始及選定遺產管理人之事由向法院報明，法無明文，爰增訂本條，規定由其會員一人以上以陳報書附具證明文件，向法院報明，並明定應報明之事項，以利遵循。
 
-* 147 親屬會議選定之遺產管理人，以自然人為限。前項遺產管理人有下列各款情形之一者，法院應解任之，命親屬會議於一個月內另為選定：一、未成年人。二、禁治產人。三、受破產宣告尚未復權者。四、褫奪公權尚未復權者。
+* 147 親屬會議選定之遺產管理人，以自然人為限。前項遺產管理人有下列各款情形之一者，法院應解任之，命親屬會議於一個月內另為選定：一、未成年人。二、受監護或輔助宣告之人。三、受破產宣告尚未復權。四、褫奪公權尚未復權。
 
-> 釋：一、原條文第五十九條條次變更為本條。二、私法人或非法人團體本身之行為，須假自然人之董事為之，故不適於擔任遺產管理人，爰增訂第一項，規定親屬會議選定之遺產管理人以自然人為限。三、原條文移列為第二項，「左列」修正為「下列」，以符現行法制用語。又親屬會議選定之遺產管理人因有第二項所定各款之情事，經法院解任後，親屬會議固應依法院之命令另行選定新管理人；惟親屬會議若遲誤或怠於選任，將有害於遺產之管理，爰於第二項增訂應於一個月內另為選定之規定。至於親屬會議若未於一個月內另選者，利害關係人或檢察官即得依民法第一千一百七十八條第二項、本法第一百四十九條第一項規定，聲請法院選任遺產管理人，併此敘明。
+> 釋：配合九十八年修正後民法，修正第二項第二款文字。又受輔助宣告之人應認不宜擔任遺產管理人為當，並於第二項第二款增列受輔助宣告人。至於依消費者債務清理條例規定受法院裁定開始清算程序之債務人，依該條例第八十四條規定，準用其他法令關於破產人資格、權利限制之規定，故遺產管理人受法院裁定開始清算程序者，自可準用第二項第三款規定。
 
 * 148 親屬會議選定之遺產管理人有下列情形之一者，法院得依利害關係人或檢察官之聲請，徵詢親屬會議會員、利害關係人或檢察官之意見後解任之，命親屬會議於一個月內另為選定：一、違背職務上之義務者。二、違背善良管理人之注意義務，致危害遺產或有危害之虞者。三、有其他重大事由者。
 
@@ -682,29 +742,29 @@
 
 > 釋：一、原條文第八十條條次變更為本條。二、關於繼承事件之聲請為有理由時，其程序費用均宜由遺產負擔，較為公允，爰將原條文第二項另立一條，並擴大適用範圍，不以原條文所定民法第六十條第三項、第一千二百十一條之聲請指定遺囑執行人事件及第一千二百十八條之聲請另行指定遺囑執行人事件為限，而及於所有關於繼承事件之聲請，以臻衡平。
 
-* 158 依民法第一千一百三十二條第一項規定為未成年人及禁治產人聲請指定親屬會議會員事件，由未成年人或禁治產人住所地之法院管轄。第一百四十條之規定，於前項情形準用之。第一項事件之聲請為有理由時，程序費用由未成年人或禁治產人負擔。
+* 158 依民法第一千一百三十二條第一項規定為未成年人及受監護或輔助宣告之人聲請指定親屬會議會員事件，由未成年人、受監護或輔助宣告之人住所地或居所地之法院管轄。前項事件之聲請為有理由時，程序費用由未成年人、受監護或輔助宣告之人負擔。第一百二十三條、第一百三十九條之二第二項及第一百四十條之規定，於第一項事件準用之。
 
-> 釋：一、原條文第七十五條條次變更為本條。二、本條第一、二項自原條文第二項移列。第一項中「聲請指定親屬會議時」修正為「聲請指定親屬會議會員事件」，以符本法各類事件有關管轄規定之用語，並配合條次變更，修正第二項所引條文號次。三、為利適用，將原條文第三項、第四項前段移列於第一百六十條，並改採按處理事件類型分別列舉之方式規範之。四、參酌原條文第四項後段及本法第二十一條有關程序費用負擔之規定意旨，增訂第三項，以臻明確。
+> 釋：一、配合九十八年修正後民法，修正第一項文字，第三項移列為第二項並作文字修正。按受輔助宣告人亦可能發生須指定親屬會議會員之情形（民法第一千一百二十條規定參照），並增列受輔助宣告人。關於管轄之規定，增訂居所地法院為管轄法院，以便利該未成年人、受監護輔助宣告之人聲請指定親屬會議會員。二、原第二項移列為第三項。第一項之未成年人、受監護宣告之人應有非訟能力；爰修正為第三項。
 
 * 159 為遺產聲請法院指定親屬會議會員事件，由繼承開始時被繼承人住所地之法院管轄。第一百四十條之規定，於前項情形準用之。第一項事件之聲請為有理由時，程序費用由遺產負擔。
 
 > 釋：一、原條文第七十七條條次變更為本條。二、第一項及第二項略作文字修正，以統一用語及配合所引條文號次之變更。三、依第二十一條規定，非訟事件之程序費用除法律另有規定外，本由聲請人負擔，無重複規定必要，爰參照本法有關費用負擔規定之體例，將第三項文字略作調整。
 
-* 160 依民法第一千一百三十二條第二項規定，聲請法院處理下列各款應經親屬會議處理之事件，由行親權人、未成年人或禁治產人住所地之法院管轄：一、民法第一千零九十條所定親權濫用之糾正。二、民法第一千零九十九條、第一千一百零一條、第一千一百零三條及第一千一百十三條第一項所定對於監護人管理、處分受監護人財產之監督。三、民法第一千一百零四條及第一千一百十三條第一項所定監護人報酬之酌定。四、民法第一千一百零六條及第一千一百十三條第一項所定監護人之撤退。五、民法第一千一百十二條第二項所定禁治產人護養處所之同意。六、民法第一千一百零七條及第一千一百十三條第一項所定監護關係終止時受監護人財產清算、移交之監督。七、民事訴訟法第五百七十一條所定禁治產人之婚姻事件代為訴訟行為人之指定或監護人提起訴訟之允許。前項各款所列事件之聲請為有理由時，程序費用由行親權人、未成年人或禁治產人負擔。
+* 160 （刪除）
 
-> 釋：一、原條文第七十五條條次變更為本條。二、本條自原條文第七十五條第三項及第四項移列。三、民法及民事訴訟法所定應經親屬會議處理之事項眾多，有父母子女關係、監護關係、扶養關係、繼承關係及遺囑等，所涉相關條文甚廣，原條文所採概括規定之方式，固可免遺漏，但適用上難免未盡清楚明確，爰改以列舉方式，按所處理事項之類型分別規定之。第一項規範親屬會議所處理有關父母子女及監護關係之事項，並依事件性質，由行親權人、未成年人或禁治產人住所地之法院管轄。四、依第二十一條規定，非訟事件之程序費用除法律另有規定外，本由聲請人負擔，無重複規定必要，爰將原條文第四項規定之文字略作調整，改列為第二項。
+> 釋：一、本條刪除。二、九十六年修正民法第一千零九十條刪除關於親屬會議對親權濫用之糾正規定；九十八年修正後民法將監護改由法院監督，無應經親屬會議處理之情形；另民事訴訟法第五百七十一條修正草案亦將關於親屬會議規定刪除，故本條即無規定之必要，爰予以刪除。
 
-* 161 法院為前條第一項第三款之裁定時，得調查監護人所為監護事務之繁簡及受監護人之財產收益狀況。法院為前條第一項第四款之裁定時，為受監護人之利益，得依聲請或依職權另行指定監護人。前條第一項第五款之同意，法院認為必要時，得依聲請或依職權撤銷或變更之。法院為前條第一項第六款之裁定時，得就有關財產之移交或交還之事項，對監護人為適當之指示，並得為其他必要之處分。
+* 161 （刪除）
 
-> 釋：一、本條新增。二、為使法院處理前條第一項所定各類非訟事件時更為周延，特增訂相關特別程序，以補原法之不足。第一項規定法院酌定監護人報酬時，得調查之事項，俾適當酬謝監護人，並兼顧受監護人之財產；第二項規定監護人經撤退後，法院得依聲請或依職權另行指定監護人，以維受監護人之利益；第三項規定法院對於將禁治產人送入精神病醫院或監禁於私宅之同意，得依聲請或依職權撤銷或變更之，以確保受禁治產人得受適當之養護；第四項規定監護關係終止時，法院對於監護人移交或交還財產有關事項，得為適當之指示或其他必要之處分，以維受監護人之權益。
+> 釋：一、本條刪除。二、配合本法第一百六十條規定刪除，爰刪除本條。
 
 * 162 依民法第一千一百三十二條第二項規定，聲請法院就民事訴訟法第五百八十六條及第五百九十六條第二項所定為養子女或未成年子女指定代為訴訟行為人事件，由養子女或未成年子女住所地之法院管轄。前項事件之聲請為有理由時，程序費用由養子女或未成年子女負擔。
 
 > 釋：一、原條文第七十五條條次變更為本條。二、本條自原條文第七十五條第三、四項移列，並改採列舉規定。三、法院依民法第一千一百三十二條第二項規定，介入處理民事訴訟法第五百八十六條及第五百九十六條第二項所定應由親屬會議為養子女或未成年子女指定代為訴訟行為人之事件時，由養子女或未成年子女住所地之法院管轄，較為便利，爰於第一項明定。四、依第二十一條規定，非訟事件之程序費用除法律另有規定外，本由聲請人負擔，無重複規定必要，爰配合條文內容將第二項文字略作修正。
 
-* 163 依民法第一千一百三十二條第二項規定，聲請法院就民法第一千一百二十條及第一千一百二十一條酌定或變更扶養方法或程度事件，由受扶養權利人住所地之法院管轄。前項事件之聲請為有理由時，程序費用由養子女或未成年子女負擔。
+* 163 依民法第一千一百三十二條第二項規定，聲請法院就民法第一千一百二十條本文之酌定扶養方法事件及第一千一百二十一條之變更扶養方法或程度事件，由受扶養權利人住所地或居所地之法院管轄。第一百二十二條第二項、第一百二十七條第二項、第三項、第一百二十九條、第一百三十一條、第一百三十九條之二第二項及第一百四十條之一第二項之規定，於前項事件準用之。
 
-> 釋：一、原條文第七十五條條次變更為本條。二、本條自原條文第七十五條第三、四項移列，並改採列舉規定。三、聲請法院酌定或變更扶養方法或程度之事件，宜由受扶養權利人住所地之法院管轄，爰於第一項明定。四、本條所定事件之聲請為有理由時，程序費用宜由扶養義務人負擔，原條文第四項就此漏未規定，爰於第二項予以補充，至於聲請為不合法或無理由時，由聲請人負擔程序費用，自不待言。
+> 釋：一、配合九十七年一月九日修正民法第一千一百二十條增訂但書之規定修正文字，及關於管轄部分，增加居所地法院為管轄法院，以便利受扶養權利人聲請，爰修正第一項。二、第一項事件之聲請有理由者，其程序費用宜由負扶養義務之人負擔，不應由養子女或未成年子女負擔；未成年子女有數人者，其住所或居所不在一法院管轄區域內者，各該住所或居所地之法院俱有管轄權；法院關於酌定或變更扶養方法或程度，如有命給付扶養費之必要者，得依聲請或依職權，命為一次給付或分期給付，分期給付遲誤一期者，其後之期間視為亦已到期，此項裁定得為執行名義；本事件處理中兩造就扶養方法或程度，得達成協議，並記明筆錄，該項筆錄應送達當事人及利害關係人，並得為執行名義；就受扶養權利有無之訴訟業已繫屬於法院者，非訟法院應將第一項事件裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判；法院為裁定前，應使關係人有陳述意見之機會；爰刪除原第二項之內容，增設準用規定，而修正第二項。
 
 * 164 法院就前條事件為裁定前，得徵詢受扶養權利人其他親屬之意見。
 
@@ -718,17 +778,25 @@
 
 > 釋：一、原條文第七十五條條次變更為本條。二、本條自原條文第三項、第四項移列，並改採列舉方式規定。三、民法繼承編中，關於應經親屬會議處理之事項，如由法院依民法第一千一百三十二條第二項之規定處理時，宜由被繼承人住所地之法院管轄，爰列舉繼承編之相關規定於第一項，訂定事件之管轄法院，以利適用。四、依第二十一條規定，非訟事件之程序費用除法律另有規定外，本由聲請人負擔，無重複規定必要，爰將原條文第四項規定之文字略作調整，改列為第二項。
 
-* 167 第一百六十一條第一項之規定，於前條第一項第三款所定事件準用之。
+* 167 法院為前條第一項第三款之裁定時，得調查遺產管理人所為遺產管理事務之繁簡及被繼承人之財產收益狀況。
 
-> 釋：一、本條新增。二、酌定遺產管理人報酬事件，性質上與酌定監護人報酬事件相近，本法第一百六十一條第一項，已增訂法院代親屬會議酌定監護人報酬時應調查事項之特別規定，於酌定遺產管理人報酬時，亦宜加以準用，爰增訂本條。
+> 釋：本法第一百六十一條雖經刪除，但法院在酌定遺產管理人之報酬時，應仍得調查遺產管理人所為遺產管理事務之繁簡及被繼承人之財產收益狀況，以利酌定適當之報酬，爰修正本條。
 
-* 168 其他依民法第一千一百三十二條所定聲請法院處理應經親屬會議處理之事件，準用第一百六十條至第一百六十七條之規定。
+* 168 其他依民法第一千一百三十二條所定聲請法院處理應經親屬會議處理之事件，準用第一百六十二條至第一百六十七條之規定。
 
-> 釋：一、本條新增。二、為利適用，本法雖將親屬會議事件改採列舉方式規定，惟本類事件類型繁多，為免遺漏及因應將來法律修正或有新增相類事件之出現，爰增訂本條，以資兼顧。
+> 釋：配合本法第一百六十條及第一百六十一條刪除，酌予文字修正。
 
 * 169 第一百二十三條至第一百二十五條之規定，於本節之事件準用之。
 
 > 釋：一、本條新增。二、本節之事件均與親屬或繼承有關，本法第一百二十三條關於七歲以上未成年人之非訟能力、第一百二十四條關於裁定前之保全處分及第一百二十五條裁定前調查程序之規定，於本節事件均有準用必要，爰增訂本條。
+
+* 169.1 兒童及少年福利法第三十七條第二項、兒童及少年性交易防制條例第十六條、第十七條、身心障礙者權益保障法第八十條第一項所定安置事件，由被安置人住所地、居所地或所在地之法院管轄。第一百二十三條及第一百三十九條之二第二項之規定，於前項事件準用之。
+
+> 釋：一、本條新增。二、配合兒童及少年福利法第三十七條第二項、兒童及少年性交易防制條例第十六條、第十七條、身心障礙者權益保障法第八十條第一項新增安置規定，爰增訂第一項。三、被安置人為滿七歲以上之未成年人或受監護宣告之人，就第一項事件，均有非訟能力，爰增訂第二項。
+
+* 169.2 精神衛生法第四十二條第三項及第五項所定聲請法院裁定停止緊急安置或強制住院事件，由嚴重病人住所地、居所地或所在地之法院管轄。第一百二十三條及第一百三十九條之二第二項之規定，於前項事件準用之。
+
+> 釋：一、本條新增。二、配合精神衛生法第四十二條第三項及第五項所定聲請法院裁定停止緊急安置或強制住院之規定，爰增訂第一項。三、嚴重病人為滿七歲以上之未成年人或受監護宣告之人，就第一項事件，均有非訟能力，爰增訂第二項。
 
 * 170 本章所定家事非訟事件，關係人或法定代理人本人無正當理由，不從法院之命到場者，得處新臺幣一萬五千元以下罰鍰。對於前項裁定得為抗告；抗告中應停止執行。
 
@@ -754,9 +822,9 @@
 
 > 釋：一、原條文第八十五條條次變更為本條。二、第一項前段未修正。後段增列但書規定。三、依朝野協商結論，增列第二項。四、依第二十一條規定，非訟事件之程序費用除法律另有規定外，本由聲請人負擔，無重複規定必要，爰將第三項文字略作調整。
 
-* 176 有下列情形之一者，不得選派為清算人：一、未成年人。二、禁治產人。三、褫奪公權尚未復權者。四、受破產宣告尚未復權者。五、曾任清算人而被法院解任者。
+* 176 有下列情形之一者，不得選派為清算人：一、未成年人。二、受監護或輔助宣告之人。三、褫奪公權尚未復權。四、受破產宣告尚未復權。五、曾任清算人而被法院解任。
 
-> 釋：一、原條文第八十六條條次變更為本條。二、本文之「左列」修改為「下列」，其餘未修正。
+> 釋：配合九十八年修正後民法，修正第二款規定。又受輔助宣告之人亦應認不宜選派為公司清算人為妥，並於第二款增列受輔助宣告之人。至於依消費者債務清理條例規定受法院裁定開始清算程序之債務人，依該條例第八十四條規定，準用其他法令關於破產人資格、權利限制之規定，故清算人受法院裁定開始清算程序者，自可準用第四款規定。
 
 * 177 第一百七十四條之規定，於法院選派之清算人準用之。
 
@@ -842,7 +910,7 @@
 
 > 釋：一、本條新增。二、本法修正施行後，就事件管轄或審理程序，已有不同於原法之規定（例如抗告原則上由地方法院以合議行之、僅得以適用法規顯有錯誤為理由，向直接上級法院提起再抗告、司法事務官處理受移轉事件所為處分等），故修正施行前已繫屬之事件，究應由何法院管轄及依修正前抑或修正後所定程序審理，宜有明文，爰本於「程序從新」原則，參考民事訴訟法施行法第四條之一訂定本條。三、本條第二款係指地方法院於本法施行前已為終局裁定，但於待確定期間，本法已開始施行之事件。此類事件固係於本法施行前已為終局裁定，但因本法就抗告及再抗告已有不同於原法之規定，故仍依程序從新原則，規定適用修正後本法之規定，亦即當事人如未於法定期間聲明不服，即應依修正後本法規定確定、核發確定證明書；當事人如於法定期間內依法聲明不服，亦應視事件係由法官裁定或司法事務官所為處分，分依修正後本法所定抗告或其他聲明不服救濟程序處理。四、第三款係指地方法院於本法修正施行前已為終局裁定，經當事人聲明不服，全案業已送至抗告法院，但抗告法院於本法施行後尚未為終局裁定之事件。因該事件於本法施行前已經一審終結，並送至抗告法院，為求程序安定，爰設程序從新原則之例外，規定此時應依本法修正前規定處理。又本款所定「抗告法院」，解釋上當然包括再抗告法院在內，故未贅列再抗告法院，附此敘明。
 
-* 198 本法自公布日起六個月施行。
+* 198 本法自公布日起六個月施行。本法中華民國九十八年十二月十五日修正條文，自公布日施行。
 
-> 釋：一、條次變更。二、明定本法自公布日起六個月施行，俾使此項攸關民眾權益之立法及早付諸實施。
+> 釋：增訂第二項「本法中華民國九十八年十二月十五日修正條文，自公布日施行」。
 
