--- a/司法-民事/公證法.md
+++ b/司法-民事/公證法.md
@@ -98,9 +98,9 @@
 
 > 釋：一、本條新增，明定民間之公證人遴任資格。二、民間之公證人辦理公證事務，攸關人民之權利義務及公共利益，以由已成年之中華民國國民擔任為宜。又民間之公證人辦理公、認證事務，得向當事人收取報酬，並於自設之事務所單獨為之，職責甚重，須有較高之素質，方可確保當事人之合法權益，其遴任資格自應從嚴規定，爰明定以經民間之公證人考試及格、曾任法官、檢察官、公設辯護人暨執業三年以上之律師等法律專業人員，或曾任法院或民間之公證人者，始得遴任為民間之公證人。
 
-* 26 有下列情事之一者，不得遴任為民間之公證人：一、年滿七十歲者。二、曾受一年有期徒刑以上刑之裁判確定者。但因過失犯罪者，不在此限。三、褫奪公權，尚未復權者。四、曾任公務員而受撤職處分，其停止任用期間尚未屆滿者。五、曾依本法免職或受撤職處分者。六、曾受律師法所定除名處分者。七、受破產之宣告，尚未復權者。八、受禁治產之宣告，尚未撤銷者。九、因身體或精神障礙致不能勝任其職務者。
+* 26 有下列情事之一者，不得遴任為民間之公證人：一、年滿七十歲。二、曾受一年有期徒刑以上刑之裁判確定。但因過失犯罪者，不在此限。三、褫奪公權，尚未復權。四、曾任公務員而受撤職處分，其停止任用期間尚未屆滿。五、曾依本法免職或受撤職處分。六、曾受律師法所定除名處分。七、受破產之宣告，尚未復權。八、受監護或輔助之宣告，尚未撤銷。九、因身體或精神障礙致不能勝任其職務。
 
-> 釋：一、本條新增。二、民間之公證人辦理公證事務，事繁責重，年齡過高者，難以勝任，必須身心健全，信譽良好，並有完全行為能力，其因故意犯罪而受刑事裁判確定，或受褫奪公權、破產之宣告尚未復權，曾任公務員受撤職處分停止任用期間尚未屆滿（公務員法第十一條參照），曾任公證人經依本決免職（第三十三條及第三十四條）或受撤職處分（第五十五條），曾任律師受律師法所定除名處分，受禁治產宣告尚未撤銷，或因身心障礙致不能勝任其職務者，均不足以獲得當事人之信賴，克盡其職責，爰參考律師法第四條、公務人員任用法第二十八條第四款、會計師法第四條、日本公證人法第十四條及韓國公證人法第十三條之例，增訂本條分列九款，明定民間之公證人之消極資格，俾資依循。
+> 釋：民國九十八年十一月二十三日施行修正之民法總則編及親屬編（下稱九十八年修正後民法）已將「禁治產」改為「監護」，爰配合修正第八款規定。又九十八年修正後民法另增訂輔助宣告制度，受輔助宣告之人為一定特定行為須經輔助人之同意，應認受輔助宣告之人不宜遴任為民間之公證人為當，並於第八款增列受輔助宣告之文字。
 
 * 27 交通不便地區無民間之公證人時，得依有關民間之公證人遴任辦法之規定，就曾在公立或經立案之私立大學、獨立學院法律學系、法律研究所或經教育部承認之國外大學法律學系、法律研究所畢業，並任薦任司法行政人員、薦任書記官辦理民刑事紀錄或委任第五職等公證佐理員四年以上，成績優良，經審查合格者，遴任為候補公證人。候補公證人候補期間三年，期滿成績優良者，得遴任為民間之公證人。候補公證人，除本法另有規定外，準用關於民間之公證人之規定。
 
@@ -126,9 +126,9 @@
 
 > 釋：一、本條新增，規定民間之公證人於執行職務前應踐行之事項。二、為使管轄法院便於查考，並行使其對民間之公證人之職務監督，爰參考律師法第七條、會計師法第九條之例，於本條第一款明定其於執行職務前應向所屬地方法院或其分院登錄。三、為便利公證人相互聯繫，交換工作經驗，以促進公證事務之發展，各地區應有公證人公會之組織，爰參考律師法第十一條、會計師法第二十七條之例，於本條第二款明定民間之公證人執行職務前，應加入公證人公會。四、為使因民間之公證人執行職務而受有損害之當事人，能獲得充分之賠償，爰參考德、奧兩國公證人強制職業責任保險之立法例（德國聯邦公證人條例第六條之一、第十九條之一、奧地利公證法第二十二條），並參考我國民用航空法第七十二條及公路法第六十五條之例，明定民間之公證人應參加責任保險並繳納保險費後，始得執行職務，列為本條第三款。五、民間之公證人於作成公證書或認證私文書時，除須依法簽名外，並應視公證文書之性質或使用地區（如境外使用等）要求之不同，分別蓋用職章或記有職稱、姓名之鋼印，以示其係依本法執行職務，所屬法院既為監督機關，自當存有公證人職章、鋼印之印鑑卡及簽名式，俾資隨時查考核對，爰參考日本公證人法第二十一條及韓國公證人法第二十條之例，增列本條第四款，規定民間之公證人於任命後，非向所屬法院提出職章、鋼印之印鑑及簽名式，不得執行職務。
 
-* 33 民間之公證人任命後有下列情事之一者，應予免職：一、受刑事裁判確定者。但因過失犯罪者，不在此限。二、受褫奪公權之宣告者。三、曾任公務員而受撤職處分者。四、受律師法所定除名處分者。五、受破產之宣告者。六、受禁治產之宣告者。七、因身體或精神障礙致不能勝任其職務者。民間之公證人於任命後，發見其在任命前有第二十六條所定各款情事之一者，亦應予免職。
+* 33 民間之公證人任命後有下列情事之一者，應予免職：一、受刑事裁判確定。但因過失犯罪者，不在此限。二、受褫奪公權之宣告。三、曾任公務員而受撤職處分。四、受律師法所定除名處分。五、受破產之宣告。六、受監護或輔助之宣告。七、因身體或精神障礙致不能勝任其職務。民間之公證人於任命後，發見其在任命前有第二十六條所定各款情事之一者，亦應予免職。
 
-> 釋：一、本條新增。二、民間之公證人經任命後，如發生相當於第二十六條第二款至第四款、第六款至第九款所列情事之一者，顯示其人品格、能力或身心已有重大瑕疵，自不宜使之繼續任職，爰參考公務人員任用法第二十八條、日本公證人法第十六條、德國聯邦公證人條例第四十七條、第五十條第一項第六、七款及奧地利公證法第十九條第一項之例，增設第一項，明定上述七款情形，列為民間之公證人「應予免職」之事由。三、民間之公證人於任命前已有第二十六條所定消極資格之事由者，本不得遴任，其因任命時未及查明，事後始行查悉者，自不得使之繼續任職，爰增列第二項，明定此種情形亦為「應予免職」之事由。惟本項係指於任命前已受處分或宣告，經任命後始行發現者而言，如因任命前之行為，於任命後始受處分者，則應適用第一項免職之規定，不屬第二項之範疇。
+> 釋：配合九十八年修正後民法，修正第一項第六款規定。又受輔助宣告之人應認不宜繼續任職為民間之公證人為當，並於第一項第六款增列受輔助宣告之文字。
 
 * 34 民間之公證人未依本法規定繳納強制責任保險費者，得予免職。
 
@@ -310,9 +310,9 @@
 
 > 釋：條次變更，本條為原條文第二十四條移列，內容不修正。
 
-* 79 下列各款之人，不得充本法所定之見證人。但第七十五條第二項之情形，不在此限：一、未成年人。二、禁治產人。三、於請求事件有利害關係者。四、於請求事件為代理人或曾為代理人者。五、為公證人之配偶、直系血親或直系姻親者。六、公證人之佐理員及助理人。前項第四款至第六款規定之人，如經請求人全體同意者，仍得為見證人。
+* 79 下列各款之人，不得充本法所定之見證人。但第七十五條第二項之情形，不在此限：一、未成年人。二、受監護或輔助宣告之人。三、於請求事件有利害關係者。四、於請求事件為代理人或曾為代理人者。五、為公證人之配偶、直系血親或直系姻親者。六、公證人之佐理員及助理人。前項第四款至第六款規定之人，如經請求人全體同意者，仍得為見證人。
 
-> 釋：一、條次變更，本條為原條文第二十五條移列。二、本條第一項有關見證人消極資格之規定，係專就本法所定之見證人（如第七十五條之見證人）而設，與實體法上之證人或見證人之資格限制（如民法第一千一百九十八條規定遺囑見證人之資格，民法第九百八十二條之結婚證人，依最高法院五十一年台上字第五五一號判例，祇須有行為能力在場親見而願證明者為已足等）不同。惟該項原規定本文將「見證人」與「證人」併列，極易發生混淆，為求明確，以免適用時發生疑義，爰將「見證人或證人」一語修正為「本法所定之見證人」。又第七十五條第二項所定之見證人，依第七十八條第一項規定，既係由請求人或其代理人選定，祇須其人於行為時有識別能力，即可充任，無另加限制之必要，故參考日本公證人法第三十四條第三項之例，於第一項本文增列但書規定，予以排除。三、本法之所以規定公證人應使見證人在場（第七十五條），僅在使其發生補強與佐證作用而已，是其資格之限制，自不宜過嚴，甚至較實體上之規定為苛，致減低人民使用公證之意願，爰參考德國公證法第二十六條及奧地利公證法第三十三條之例，將第一項第五款從寬修正為「為公證人之配偶、直系血親或直系姻親者」。又為配合公證制度之引進，並修正第六款為「公證人之佐理員及助理人」俾可涵蓋法院公證處及民間之公證人事物所經辦該事件之佐理員或助理人。四、第一項第一款至第四款均不修正。五、請求公證之當事人，不以「雙方」為限，如就合同行為請求公證，則第二項第二句所謂「雙方當事人同意」即難涵蓋，爰修正為「請求人全體」，以示須請求人全體同意。
+> 釋：配合九十八年修正後民法，修正第一項第二款規定。又受輔助宣告之人應認不宜充為公證法所定之見證人為當，並於第一項第二款增列受輔助宣告人。
 
 * 80 公證人作成公證書，應記載其所聽取之陳述與所見之狀況，及其他實際體驗之方法與結果。
 
@@ -602,7 +602,7 @@
 
 > 釋：條次變更，本條為原條文第六十六條移列，內容不修正。
 
-* 152 本法自公布生效後二年施行。
+* 152 本法自公布生效後二年施行。本法修正條文，除中華民國九十八年十二月十五日修正之第二十六條、第三十三條、第七十九條自中華民國九十八年十一月二十三日施行外，自公布日施行。
 
-> 釋：一、條次變更，本條為原條文第六十七條移列。二、本法修正為兼採法院與民間之公證人並行之雙軌制，作體制上之重大變革。增訂有關民間之公證人遴任、研習、員額設定、代理、兼任、監督、懲戒、責任保險、公會組織及罰則等規定之條文甚多，並就公、認證之標的及其辦理方法多所修正，於施行之初，除應就施行細則作通盤檢討修正外，尚須依本法之規定制定各種補助法規，司法院對於民間之公證人制度之建立及公證人公會之運作等事項，必須一一介入輔導，頭緒紛繁，百端待舉，為預留準備與宣導期間，使新制得以順利推行，爰參考公平交易法第四十九條之例，修正施行日期為自本法公布生效後二年施行，以資因應。
+> 釋：配合九十八年修正後民法，增列第二項規定。
 
