民法第二編債 2009.12.15

--- a/司法-民事/民法第二編債.md
+++ b/司法-民事/民法第二編債.md
@@ -1504,9 +1504,9 @@
 
 > 釋：依原條文第三項聲明退夥時，是否須先期通知或得否於不利於合夥事務之時期為之？法無明文規定，易滋疑義。為期明確，爰明定「不受前二項規定之限制」。
 
-* 687 合夥人除依前二條規定退夥外，因左列事項之一而退夥：一、合夥人死亡者。但契約訂明其繼承人得繼承者，不在此限。二、合夥人受破產或禁治產之宣告者。三、合夥人經開除者。
+* 687 合夥人除依前二條規定退夥外，因下列事項之一而退夥：一、合夥人死亡者。但契約訂明其繼承人得繼承者，不在此限。二、合夥人受破產或監護之宣告者。三、合夥人經開除者。
 
-> 釋：第六百八十五條業經修正為非當然退夥，本條爰配合修正並作文字調整。
+> 釋：一、配合九十七年五月二十三日修正公布之民法總則編（禁治產部分）、親屬編（監護部分）及其施行法部分條文，已將「禁治產宣告」修正為「監護宣告」，爰將現行條文第二款「受禁治產之宣告」修正為「受監護之宣告」；其餘各款未修正。二、又依民法第十五條之二第一項第一款規定，受輔助宣告之人經輔助人同意，得為合夥營業之負責人。此乃因受輔助宣告之人僅係因精神障礙或其他心智缺陷，致其為意思表示或受意思表示，或辨識其所為意思表示效果之能力，顯有不足，並不因輔助宣告而喪失行為能力，惟為保護其權益，於為重要之法律行為時，應經輔助人同意。故受輔助宣告之人經輔助人之同意，仍得為合夥營業之負責人。
 
 * 688 合夥人之開除，以有正當理由為限。前項開除，應以他合夥人全體之同意為之，並應通知被開除之合夥人。
 
@@ -1550,7 +1550,9 @@
 
 * 707 出名營業人，除契約另有訂定外，應於每屆事務年度終，計算營業之損益，其應歸隱名合夥人之利益，應即支付之。應歸隱名合夥人之利益而未支取者，除另有約定外，不得認為出資之增加。
 
-* 708 除依第六百八十六條之規定得聲明退夥外，隱名合夥契約，因左列事項之一而終止：一、存續期限屆滿者。二、當事人同意者。三、目的事業已完成或不能完成者。四、出名營業人死亡或受禁治產之宣告者。五、出名營業人或隱名合夥人受破產之宣告者。六、營業之廢止或轉讓者。
+* 708 除依第六百八十六條之規定得聲明退夥外，隱名合夥契約，因下列事項之一而終止：一、存續期限屆滿者。二、當事人同意者。三、目的事業已完成或不能完成者。四、出名營業人死亡或受監護之宣告者。五、出名營業人或隱名合夥人受破產之宣告者。六、營業之廢止或轉讓者。
+
+> 釋：配合九十七年五月二十三日修正公布之民法總則編（禁治產部分）、親屬編（監護部分）及其施行法部分條文，已將「禁治產宣告」修正為「監護宣告」，爰將原條文第四款「受禁治產之宣告」修正為「受監護之宣告」；其餘各款未修正。
 
 * 709 隱名合夥契約終止時，出名營業人，應返還隱名合夥人之出資及給與其應得之利益。但出資因損失而減少者，僅返還其餘存額。
 
