證券交易法 2009.12.22

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -278,9 +278,9 @@
 
 > 釋：依第四款、第六款規定受處分者未滿五年，均不得充任證券商之董事、監察人或經理人，影響當事人權益至鉅，且有剝奪工作權過苛之嫌，爰將此二款之年限修正為「未滿三年者」，以昭法治與人權之衡平旨意。
 
-* 54 證券商僱用對於有價證券營業行為直接有關之業務人員，應年滿二十歲，並具備有關法令所規定之資格條件，且無下列各款情事之一：一、受破產之宣告尚未復權。二、兼任其他證券商之職務。但因投資關係，並經主管機關核准兼任被投資證券商之董事或監察人者，不在此限。三、（刪除）四、曾犯詐欺、背信罪或違反工商管理法律，受有期徒刑以上刑之宣告，執行完畢、緩刑期滿或赦免後未滿三年。五、有前條第二款至第四款或第六款情事之一。六、違反主管機關依本法所發布之命令。前項業務人員之職稱，由主管機關定之。
+* 54 證券商僱用對於有價證券營業行為直接有關之業務人員，應年滿二十歲，並具備有關法令所規定之資格條件，且無下列各款情事之一：一、受破產之宣告尚未復權、受監護宣告或受輔助宣告尚未撤銷。二、兼任其他證券商之職務。但因投資關係，並經主管機關核准兼任被投資證券商之董事或監察人者，不在此限。三、（刪除）四、曾犯詐欺、背信罪或違反工商管理法律，受有期徒刑以上刑之宣告，執行完畢、緩刑期滿或赦免後未滿三年。五、有前條第二款至第四款或第六款情事之一。六、違反主管機關依本法所發布之命令。前項業務人員之職稱，由主管機關定之。
 
-> 釋：一、鑒於本法第五十一條已修正證券商之董事、監察人、經理人，因投資關係並經主管機關核准者，得兼任被投資證券商之董事或監察人，故本條第一項第二款爰配合放寬，對於有價證券營業行為直接有關之業務人員，因投資關係，並經主管機關核准者，得兼任被投資證券商之董事或監察人。另酌作文字修正。二、第二項未修正。
+> 釋：一、九十七年五月二十三日修正公布之民法總則第十四條及第十五條將「禁治產」用語修正為「監護」，及增訂第十五條之一、第十五條之二「輔助宣告」之規定，其中「受監護宣告之人」為無行為能力，而「受輔助宣告之人」之精神狀況為「因精神障礙或其他心智缺陷，致其為意思表示或受意思表示，或辨識其意思表示效果之能力，顯有不足」，受輔助宣告之人雖不因輔助宣告而喪失行為能力，惟其為重要之法律行為時，應經輔助人同意。考量從事證券相關業務之人員，其執行業務須諸多專業判斷能力，並負有相當之業務職責，基於保護交易相對人及投資人權益，爰於第一項第一款增訂受監護宣告或受輔助宣告尚未撤銷者，均不得充任證券商之業務人員。二、第二項未修正。
 
 * 55 證券商於辦理公司設立登記後，應依主管機關規定，提存營業保證金。因證券商特許業務所生債務之債權人，對於前項營業保證金，有優先受清償之權。
 
